arreglado el footer

--- a/index.html
+++ b/index.html
@@ -21,5 +21,8 @@
     </div>
     
     <script src="script.js"></script>
+    <footer class="footer">
+        <p>Desarrollado por <a href="https://www.instagram.com/cypictronic/"  target="_blank">Cypictronic</a></p>
+    </footer>     
 </body>
 </html>
